[css-cascade] Fix 'revert' on low-priority properties https://bugs.webkit.org/show_bug.cgi?id=236272

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Add one test and expect an existing one to pass.

* web-platform-tests/css/css-cascade/all-prop-revert-layer-noop-expected.txt:
* web-platform-tests/css/css-cascade/all-prop-revert-noop-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer-noop-expected.txt.
* web-platform-tests/css/css-cascade/all-prop-revert-noop.html: Added.

Source/WebCore:

Some CSS properties are low-priority (a.k.a deferred or applied in parse
order). The logic for the 'revert' keyword was not taking these into
account, so it just behaved as 'unset'.
That made elements like <del>, <ins>, <s> and <u> lose the line-through
or underline thet they get in UA origin, when styled with 'all: revert'
or 'text-decoration: revert'.

This patch takes these properties into account so that 'revert' works.

Tests: imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer-noop.html
       imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-noop.html

* style/PropertyCascade.cpp:
(WebCore::Style::PropertyCascade::setDeferred):
* style/PropertyCascade.h:
(WebCore::Style::PropertyCascade::hasDeferredProperty const):
(WebCore::Style::PropertyCascade::deferredProperty const):
* style/StyleBuilder.cpp:
(WebCore::Style::Builder::applyProperty):



Canonical link: https://commits.webkit.org/248412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291260 268f45cc-cd09-0410-ab3c-d52691b4dbfc